--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -26,10 +26,10 @@
 
   <h3 class="setHeight" style="margin-top: 10px;">Payment Credit Card</h3>Yes
   <input class="form-check-input" type="radio"
-   name="gob" [value]="true" (change)="onCreditCardChanges(true)"/>
+   name="credit card" [(ngModel)]="paymentCreditCard" [value]="true" (change)="onCreditCardChanges(true)"/>
    No
   <input class="form-check-input" type="radio"
-   name="gob" [value]="false" (change)="onCreditCardChanges(false)" />
+   name="credit card" [(ngModel)]="paymentCreditCard" [value]="false" (change)="onCreditCardChanges(false)" />
 </div>
 
 <div id="invoice-container" class="invoice-container">
@@ -115,12 +115,12 @@
       <div>Total Amount: {{ getTotalAmount() | currency:'CAD':'symbol':'1.2-2' }}</div>
     </div>
     
-    <div style="margin-left: 500px;margin-top: 150px;">
+    <div style="margin-left: 500px;margin-top: 120px;">
      
       <p style="float: left;margin-top: -20px;">Signature:</p>
       <hr>
     </div>
-    <div style="margin-top: 150px;"> 
+    <div style="margin-top: 130px;"> 
       <div><b>TERMS & CONDITIONS</b></div>
       <div>1. No returns/exchange, if mounted.</div>
       <div>2. 1 year manufacture warranty, road hazard is not included.</div>
