--- a/src/app/components/user-section/user-section.component.html
+++ b/src/app/components/user-section/user-section.component.html
@@ -17,8 +17,8 @@
             
             <!-- Dropdown select -->
             <div class="dropdown-select" style="float: right;">
-                <select (change)="onDropdownChange($event)">
-                    <option value="week">This Week</option>
+                <select (change)="onDropdownChange($event)" style="border: none;">
+                    <option value="week" style="padding: 10px;">This Week</option>
                     <option value="today">Today</option>
                     <option value="month">This Month</option>
                     <option value="year">This Year</option>
