chnages for the frontend

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -70,7 +70,7 @@
           </div>
           <div class="col-md-4">
             <div style="display: flex;flex-direction: row-reverse;">Invoice Number: INV {{invoiceNumber}}</div>
-            <div style="display: flex;flex-direction: row-reverse;" >Date:  2024/01/10</div>
+            <div style="display: flex;flex-direction: row-reverse;" >Date: {{currentDate | date:'yyyy-MM-dd'}}</div>
           </div>
         </div>
     </div>
