done the chnages for the shahg

--- a/src/app/components/employee-edit-add/employee-edit-add.component.html
+++ b/src/app/components/employee-edit-add/employee-edit-add.component.html
@@ -79,6 +79,7 @@
                   <select  (change)="typeChange($event)"  formControlName="pattern" style="margin: 10px; height: 32px;width: 120px; margin-top: 10px;">
                     <option value="Snow">Snow Tires</option>
                     <option value="AllSeason">All Season</option>
+                    <option value="AllSeason">All Weather</option>
                   </select>
                   <div
                     *ngIf="tireForm.controls.pattern.invalid && (tireForm.controls.pattern.dirty || tireForm.controls.pattern.touched) && formDir.submitted">
