chnages for the logo

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -37,7 +37,7 @@
       <div class="col-md-12">
         <div class="col-md-10">
           <div class="logo">
-            <img  src="../../../assets/images/shahGLogo.jpg"/>
+            <img  src="../../../assets/images//Shah G Rimes & Tire Logo.jpg"/>
           </div>
           <div style="font-size: 20px; float: left;"><b>SHAH G RIM & TIRES</b></div>
         </div>
