--- a/src/app/components/withouttax-invoice/withouttax-invoice.component.html
+++ b/src/app/components/withouttax-invoice/withouttax-invoice.component.html
@@ -61,6 +61,7 @@
         <tr>
           <th>Service</th>
           <th>Brand</th>
+          <th>Pattern</th>
           <th>Number of Items</th>
           <th>Price</th>
           <th>Total</th>
@@ -70,6 +71,7 @@
         <tr *ngFor="let item of productListing.items.rims">
           <td>{{ item.size }}</td>
           <td>{{item.brandName}}</td>
+          <td>{{ item.pattern }}</td>
           <td>{{ item.number_of_items }}</td>
           <td>{{ item.price }}</td>
           <td>${{ item.number_of_items * item.price }}</td>
