--- a/src/app/components/withouttax-invoice/withouttax-invoice.component.html
+++ b/src/app/components/withouttax-invoice/withouttax-invoice.component.html
@@ -79,12 +79,14 @@
         <tr *ngFor="let item of productListing.items.tires">
           <td>{{ item.size }}</td>
           <td>{{item.brandName}}</td>
+          <td>{{ item.pattern }}</td>
           <td>{{ item.number_of_items }}</td>
           <td>{{ item.price }}</td>
           <td>${{ item.number_of_items * item.price }}</td>
         </tr>
         <tr *ngIf="includeOTS">
           <td>O.T.S($4.50)</td>
+          <td></td>
           <td></td>
           <td>{{totalItems}}</td>
           <td>4.50</td>
